Here's the commented version of the code snippet:

```c++
/*
 *
 * Copyright 2016 gRPC authors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 */

#ifndef GRPC_INTERNAL_COMPILER_NODE_GENERATOR_H
#define GRPC_INTERNAL_COMPILER_NODE_GENERATOR_H

// Include necessary configuration headers
#include "src/compiler/config.h"

// Namespace for Node.js gRPC code generation functionality
namespace grpc_node_generator {

// Structure to hold parameters for Node.js code generation
struct Parameters {
  // Minimum version of Node.js required for the generated code
  int minimum_node_version;
};

// Generates gRPC Node.js service code for a given protocol buffer file
// Parameters:
//   file - Pointer to the protocol buffer file descriptor
//   params - Configuration parameters for code generation
// Returns:
//   Generated code as a string
std::string GenerateFile(const grpc::protobuf::FileDescriptor* file,
                         const Parameters& params);

}  // namespace grpc_node_generator

#endif  // GRPC_INTERNAL_COMPILER_NODE_GENERATOR_H
```

The comments added explain:
1. The purpose of the header file inclusion
2. The overall purpose of the namespace
3. The structure and purpose of the Parameters struct and its field
4. The functionality, parameters, and return value of the GenerateFile function
5. The closing of the namespace and header guard

The comments are concise yet informative, providing enough context for future maintainers to understand the code's purpose and usage without being overly verbose.